// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner border renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: dotted 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: inset 12px #7D4CDB;
  border-bottom: inset 12px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 4px transparent;
  border-top: solid 4px #7D4CDB;
  border-bottom: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 4px #33333310;
  border-right: solid 4px #7D4CDB;
  border-top: solid 4px #7D4CDB;
  border-left: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 4px #7D4CDB;
  border-bottom: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: dotted 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: inset 6px #7D4CDB;
    border-bottom: inset 6px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 4px transparent;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 4px #7D4CDB;
    border-bottom: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 4px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-right: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-left: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 4px #7D4CDB;
    border-bottom: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`Spinner renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c1"
    id="test id"
    name="test name"
  />
</div>
`;

exports[`Spinner round renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 12px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 48px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-radius: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-radius: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-radius: 24px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
</div>
`;

exports[`Spinner should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`Spinner size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 18px;
  width: 18px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 2px #33333310;
  border-top: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 4px #33333310;
  border-top: solid 4px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 48px;
  width: 48px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 12px #33333310;
  border-top: solid 12px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 72px;
  width: 72px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 24px #33333310;
  border-top: solid 24px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 96px;
  width: 96px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 2px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 4px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 4px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 6px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 6px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border: solid 12px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 12px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`Spinner size renders 2`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #6FFFB0;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #00873D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #3D138D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #00739D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #33333310;
  border-top: solid 1px #A2423D;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 24px;
  width: 24px;
  padding: 12px;
  border-radius: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gCPKsF 1s 0s infinite linear;
  animation: gCPKsF 1s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #6FFFB0;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 1px #00873D;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-top: solid 1px #3D138D;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 1px #00739D;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-top: solid 1px #A2423D;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding: 6px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
</div>
`;

exports[`Spinner spinner changes according to theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: red;
  border: solid 1px #33333310;
  border-top: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 30px;
  width: 30px;
  padding: 48px;
  border-radius: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: gNoyFE 0.9s 0s infinite linear;
  animation: gNoyFE 0.9s 0s infinite linear;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px #33333310;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-top: solid 1px #7D4CDB;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 24px;
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    border-radius: 12px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;
